--- a/html-repetitivo/index.html
+++ b/html-repetitivo/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Hola Mundo!!!</h1>
+    <p>Estoy aprendiendo a realizar una pagina web!!!</p>
+    <h2>The odin project <3</h2>
 </body>
 </html>
