--- a/html-repetitivo/index.html
+++ b/html-repetitivo/index.html
@@ -9,5 +9,6 @@
     <h1>Hola Mundo!!!</h1>
     <p>Estoy aprendiendo a realizar una pagina web!!!</p>
     <h2>The odin project <3</h2>
+    <img src="../OdinLinkImages/images/dog.jpg">
 </body>
 </html>
