--- a/OdinLinkImages/index.html
+++ b/OdinLinkImages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Links</title>
 </head>
 <body>
     <h1>Pagina de inicio</h1>
@@ -11,5 +11,7 @@
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">Acerca de The Odin Project</a>
     <p>Enlace relativo</p>
     <a href="./pages/about.html" target="_blank" rel="noopener noreferrer">Acerca de</a>
+    <p>Imagen</p>
+    <img src="./images/dog.jpg">
 </body>
 </html>
