se agrego la propiedad alt, heigth,width

--- a/OdinLinkImages/index.html
+++ b/OdinLinkImages/index.html
@@ -12,6 +12,6 @@
     <p>Enlace relativo</p>
     <a href="./pages/about.html" target="_blank" rel="noopener noreferrer">Acerca de</a>
     <p>Imagen</p>
-    <img src="./images/dog.jpg">
+    <img src="./images/dog.jpg" alt="Imagen de un perro pug color negro" height="310" width="310">
 </body>
 </html>
